--- a/app/views/main.html
+++ b/app/views/main.html
@@ -11,7 +11,7 @@
   
   <div class="col-md-9">
     <div class="jumbotron">
-        <img style="float: right; margin-top: -20px" src="https://lh4.googleusercontent.com/-TgRw25EW5zI/AAAAAAAAAAI/AAAAAAAAL7k/SbLenKDqfKQ/s250-c-k/photo.jpg" alt="Joel Hammond-Turner">
+      <img class="hero-image" src="https://lh4.googleusercontent.com/-TgRw25EW5zI/AAAAAAAAAAI/AAAAAAAAL7k/SbLenKDqfKQ/s250-c-k/photo.jpg" alt="Joel Hammond-Turner">
       <h1>Hello t'Internet</h1>
       <p>Welcome to my <strong>new</strong>, new home on the net.</p>
       <p><a class="btn btn-lg btn-primary" ng-href="#/">Learn More <span class="glyphicon glyphicon-chevron-right"></span></a></p>
@@ -20,28 +20,37 @@
 </div>  
 
 <div class="row-fluid">
-  <div class="col-md-4">
+  <div class="col-md-6">
+    <div class="well sidebar-nav">
     <h2>Golden Nuggets</h2>
       <h4>Nuggets of technical information for .Net developers</h4>
     <p><a class="btn" href="http://nuggets.hammond-turner.org.uk/">View blog...</a></p>
-  </div><!--/span-->
-  <div class="col-md-4">
+  </div>
+  </div>
+  <div class="col-md-3">
+    <div class="well sidebar-nav">
     <h2>The Social Network(s)</h2>
-      <p><a href="http://www.linkedin.com/in/joelht" ><img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x33.gif" width="160" height="33" border="0" alt="View Joel Hammond-Turner's profile on LinkedIn"></a></p>
-      <p><a href="https://twitter.com/rammesses" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @rammesses</a></p>
-      <p><div class="g-plus" data-height="69" data-href="//plus.google.com/117666997091968844601" data-rel="author"></div>
-  </div><!--/span-->
+    <div class="container-fluid">
+      <div class="col-sm2">
+        <p><a href="http://www.linkedin.com/in/joelht" ><img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x33.gif" width="160" height="33" border="0" alt="View Joel Hammond-Turner's profile on LinkedIn"></a></p>
+      </div>
+      <div class="col-sm2">
+        <p><a href="https://twitter.com/rammesses" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @rammesses</a></p>
+      </div>
+      <div class="col-sm2">
+        <div class="g-follow" data-annotation="bubble" data-height="24" data-href="//plus.google.com/u/0/117666997091968844601" data-rel="author"></div>
+      </div>
+    </div>
+  </div>
+  </div>
 </div><!--/row-->
 
 </div>
 
 
 <script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
-    <script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = "//platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs); } }(document, "script", "twitter-wjs");</script></p>
-<script type="text/javascript">
-    (function () {
-        var po = document.createElement('script'); po.type = 'text/javascript'; po.async = true;
-        po.src = 'https://apis.google.com/js/plusone.js';
-        var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(po, s);
-    })();
+<script>!function (d, s, id) { var js, fjs = d.getElementsByTagName(s)[0]; if (!d.getElementById(id)) { js = d.createElement(s); js.id = id; js.src = "//platform.twitter.com/widgets.js"; fjs.parentNode.insertBefore(js, fjs); } }(document, "script", "twitter-wjs");</script></p>
+<script src="https://apis.google.com/js/platform.js" async defer>
+  {lang: 'en-GB'}
 </script>
+
