First pass of employment timeline

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,19 +14,37 @@
       <img class="hero-image" src="https://lh4.googleusercontent.com/-TgRw25EW5zI/AAAAAAAAAAI/AAAAAAAAL7k/SbLenKDqfKQ/s250-c-k/photo.jpg" alt="Joel Hammond-Turner">
       <h1>Hello t'Internet</h1>
       <p>Welcome to my <strong>new</strong>, new home on the net.</p>
-      <p><a class="btn btn-lg btn-primary" ng-href="#/">Learn More <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+      <p><a class="btn btn-sml btn-primary" ng-href="#/about">Learn More <span class="glyphicon glyphicon-chevron-right"></span></a></p>
     </div>
   </div>
 </div>  
 
 <div class="row-fluid">
-  <div class="col-md-6">
+  <div class="col-md-3">
     <div class="well sidebar-nav">
     <h2>Golden Nuggets</h2>
       <h4>Nuggets of technical information for .Net developers</h4>
-    <p><a class="btn" href="http://nuggets.hammond-turner.org.uk/">View blog...</a></p>
+    <p><a class="btn btn-sml btn-primary" href="http://nuggets.hammond-turner.org.uk/">View blog  <span class="glyphicon glyphicon-chevron-right"></span></a></p>
   </div>
   </div>
+  
+  <div class="col-md-3">
+    <div class="well sidebar-nav">
+      <div>
+        <h2>Speaking</h2>
+        <p>I get about a bit, and have spoken at community conferences and user groups</p>
+        <ul>
+          <li>DDD South West 2015</li>
+          <li>DDD North 2014</li>
+          <li>DDD East Anglia 2014</li>
+          <li>DDD North 2013</li>
+          <li>DDD East Anglia 2013</li>
+          <li>DDD South West 2013</li>
+        </ul>
+      </div>
+    </div>          
+  </div>
+
   <div class="col-md-3">
     <div class="well sidebar-nav">
     <h2>The Social Network(s)</h2>
