--- a/app/views/about.html
+++ b/app/views/about.html
@@ -1,15 +1,9 @@
 <div class="container-fluid">
 
 <div class="row-fluid">
-  <div class="col-md-3">
-    <div class="well sidebar-nav">
-      <div>
-        <a class="twitter-timeline" href="https://twitter.com/rammesses" data-widget-id="273547403695624192">Tweets by @rammesses</a>
-      </div>
-    </div><!--/.well -->
-  </div><!--/span-->
   
-  <div class="col-md-9">
+  
+  <div class="col-md-6">
     <div class="jumbotron">
       <img class="hero-image" src="https://lh4.googleusercontent.com/-TgRw25EW5zI/AAAAAAAAAAI/AAAAAAAAL7k/SbLenKDqfKQ/s250-c-k/photo.jpg" alt="Joel Hammond-Turner">
       <h1>About Me</h1>
@@ -21,15 +15,30 @@
       </div>
     </div>
   </div>
-</div>  
 
-<div class="row-fluid">
-  <div class="col-md-9">
+<div class="col-md-6">
+    <div class="well sidebar-nav">
+      <div>
+        <h3>A potted history</h3>
+        <ul>
+          <li><a href="#/cv/1987-1996">Early Years (1987-1996)</a></li>
+          <li><a href="#/cv/1996-1998">First contact with employment…  and the antiques trade (1996 to 1998)</a></li>
+          <li><a href="#/cv/1998-2002">S(h)ifting gears (1998  to 2002)</a></li>
+          <li><a href="#/cv/H1-2003">Free and easy for 6 months (H1 2003)</a></li>
+          <li><a href="#/cv/2003-2006">Mando – the company that doesn’t need its name in its branding (2003-2006)</a></li>
+          <li><a href="#/cv/2006-2011">Healthy change – bigger challenges (2006 to 2011)</a></li>
+          <li><a href="#/cv/2011-">Landing right on the Mark (2011 to present)</a></li>
+        </ul>
+      </div>
+    </div>    
+  </div>
+  
+  <div class="col-md-6">
     	 						
     <ul class="timeline">
         <!-- Landmark -->
         <li>
-          <div class="timeline-badge"><i class="glyphicon glyphicon-briefcase"></i></div>
+          <div class="timeline-badge success"><i class="glyphicon glyphicon-briefcase"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
               <h4 class="timeline-title">Technical Lead - Landmark Information Group</h4>
@@ -57,7 +66,7 @@
     
         <!-- Mando -->
         <li>
-          <div class="timeline-badge"><i class="glyphicon glyphicon-briefcase"></i></div>
+          <div class="timeline-badge success"><i class="glyphicon glyphicon-briefcase"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
               <h4 class="timeline-title">Lead Systems Architect & Head of Programming - Mando Group Ltd</h4>
@@ -71,7 +80,7 @@
 
         <!-- Freelance -->
         <li class="timeline-inverted">
-          <div class="timeline-badge warning"><i class="glyphicon glyphicon-briefcase"></i></div>
+          <div class="timeline-badge danger"><i class="glyphicon glyphicon-briefcase"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
               <h4 class="timeline-title">Freelance Technical Consultant</h4>
@@ -85,7 +94,7 @@
         
         <!-- Sift -->
         <li>
-          <div class="timeline-badge"><i class="glyphicon glyphicon-briefcase"></i></div>
+          <div class="timeline-badge success"><i class="glyphicon glyphicon-briefcase"></i></div>
           <div class="timeline-panel">
             <div class="timeline-heading">
               <h4 class="timeline-title">Various, to IT Project Manager - Sift Group Ltd</h4>
@@ -114,5 +123,4 @@
     </ul>
   </div>
 </div>
-
-<script>!function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src="//platform.twitter.com/widgets.js";fjs.parentNode.insertBefore(js,fjs);}}(document,"script","twitter-wjs");</script>
+    
