changes to homepage

--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,7 +14,7 @@
       <img class="hero-image" src="https://lh4.googleusercontent.com/-TgRw25EW5zI/AAAAAAAAAAI/AAAAAAAAL7k/SbLenKDqfKQ/s250-c-k/photo.jpg" alt="Joel Hammond-Turner">
       <h1>Hello t'Internet</h1>
       <p>Welcome to my <strong>new</strong>, new home on the net.</p>
-      <p><a class="btn btn-lg btn-primary" ng-href="#/">Learn More <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+      <p><a class="btn btn-lg btn-primary" ng-href="#/about">Learn More <span class="glyphicon glyphicon-chevron-right"></span></a></p>
     </div>
   </div>
 </div>  
@@ -24,7 +24,7 @@
     <div class="well sidebar-nav">
     <h2>Golden Nuggets</h2>
       <h4>Nuggets of technical information for .Net developers</h4>
-    <p><a class="btn" href="http://nuggets.hammond-turner.org.uk/">View blog...</a></p>
+    <p><a class="btn btn-sm btn-primary" href="http://nuggets.hammond-turner.org.uk/">View blog <span class="glyphicon glyphicon-chevron-right"></span></a></p>
   </div>
   </div>
   <div class="col-md-3">
