--- a/app/views/main.html
+++ b/app/views/main.html
@@ -12,7 +12,7 @@
   <div class="col-md-9">
     <div class="jumbotron">
       <img class="hero-image" src="https://lh4.googleusercontent.com/-TgRw25EW5zI/AAAAAAAAAAI/AAAAAAAAL7k/SbLenKDqfKQ/s250-c-k/photo.jpg" alt="Joel Hammond-Turner">
-      <h1>Hello t'Internet</h1>
+      <h1><span class="glyphicon glyphicon-globe"></span> Hello t'Internet</h1>
       <p>Welcome to my <strong>new</strong>, new home on the net.</p>
       <p><a class="btn btn-sml btn-primary" ng-href="#/about">Learn More <span class="glyphicon glyphicon-chevron-right"></span></a></p>
     </div>
@@ -22,8 +22,8 @@
 <div class="row-fluid">
   <div class="col-md-3">
     <div class="well sidebar-nav">
-    <h2>Golden Nuggets</h2>
-      <h4>Nuggets of technical information for .Net developers</h4>
+    <h2><span class="glyphicon glyphicon-comment"></span> Golden Nuggets</h2>
+      <p>My blog - delivering nuggets of technical information for .Net developers</p>
     <p><a class="btn btn-sm btn-primary" href="http://nuggets.hammond-turner.org.uk/">View blog <span class="glyphicon glyphicon-chevron-right"></span></a></p>
   </div>
   </div>
@@ -31,23 +31,17 @@
   <div class="col-md-3">
     <div class="well sidebar-nav">
       <div>
-        <h2>Speaking</h2>
-        <p>I get about a bit, and have spoken at community conferences and user groups</p>
-        <ul>
-          <li>DDD South West 2015</li>
-          <li>DDD North 2014</li>
-          <li>DDD East Anglia 2014</li>
-          <li>DDD North 2013</li>
-          <li>DDD East Anglia 2013</li>
-          <li>DDD South West 2013</li>
-        </ul>
+        <h2><span class="glyphicon glyphicon-bullhorn"></span> Speaking</h2>
+        <p>I get about a bit, and have spoken at quite a few community conferences and user groups - and I am always looking for more opportunities.</p>
+        <p><a class="btn btn-sm btn-primary" href="/#/speaking">Learn more <span class="glyphicon glyphicon-chevron-right"></span></a></p>
       </div>
     </div>          
   </div>
 
   <div class="col-md-3">
     <div class="well sidebar-nav">
-    <h2>The Social Network(s)</h2>
+    <h2><span class="glyphicon glyphicon-thumbs-up"></span> The Social Network(s)</h2>
+    <p>These are probably the best ways to interact with me.</p>
     <div class="container-fluid">
       <div class="col-sm2">
         <p><a href="http://www.linkedin.com/in/joelht" ><img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x33.gif" width="160" height="33" border="0" alt="View Joel Hammond-Turner's profile on LinkedIn"></a></p>
