Tweaked index so timeline.css gets compiled. Tweaked content of speaking page. Added custom favicon

--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -31,6 +31,10 @@
        <p>DevOps is the now very much a "thing" - but keeping your DevOps team happy isn't just about 
           working with them on deployments, it's about giving them the tools to support your code in 
           production.</p>
+       <p>In this talk I set the stage with some real-world experience, and then show you how good logging
+          and application monitoring can be easily baked into your code from the start using Serilog, 
+          Metrics.Net and other helpers, and how Splunk should be your best friend as you bring your 
+          code to production.</p>
      </div>
      <div>
        <h3>So you want to be a Tech Lead? 10 things you need to do to succeed.</h3>
