--- a/app/views/about.html
+++ b/app/views/about.html
@@ -11,7 +11,11 @@
 		       elegance in my solutions that make me an extremely capable software architect.</p>
 	      <p>Personable and professional, I revel in complex challenges, but always make time to coach and mentor team members.</p>
 	      <p>And I can shoot & edit video and create graphics too - being a partner in <a href="http://www.videocrew.co.uk" title="Link to videocrew.co.uk">The Video Crew</a></p>
-        <p>History: {{$scope.historyIndexUrl}}</p>
+        <p>You can see a brief history of my professional life to the right.</p>
+        <h3>Why "<strong>new</strong>, new"?</h3>
+        <p>Quite simply this is a rework of my old web site - an effectively static ASP.Net MVC web site  - 
+           into a genuinely static web site that I can serve directly out of Amazon S3.</p>
+        <p>Because it's cheaper!</p>
       </div>
     </div>
   </div>
