Added DDD North 2015 to Speaking page

--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -27,6 +27,7 @@
        <h3>Logging and Monitoring - How to keep DevOps happy</h3>
        <ul class="text-muted">
          <li><a href="http://www.dddsouthwest.com/Blog/Post/68/Proposed-Session--Logging-and-Monitoring---How-to-keep-DevOps-happy">DDD South West 6 - May 2015</a></li>
+         <li><a href="http://www.dddnorth.co.uk/Sessions/Details/143">DDD North - Oct 2015</a></li>
        </ul>
        <p>DevOps is the now very much a "thing" - but keeping your DevOps team happy isn't just about 
           working with them on deployments, it's about giving them the tools to support your code in 
