--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -17,6 +17,9 @@
            plenty more ideas, and am always on the look out for new speaking
            opportunities.
            </p>
+           
+         <img class="leftbar-image" src="/images/speaking_at_dddeastanglia_2015.jpg" 
+              alt="Speaking at DDD East Anglia 2015." title="Speaking at DDD East Anglia 2015. Image (c) Adrian Banks 2015" />
       </div>
     </div>
   </div>
@@ -27,6 +30,7 @@
        <h3>Logging and Monitoring - How to keep DevOps happy</h3>
        <ul class="text-muted">
          <li><a href="http://www.dddsouthwest.com/Blog/Post/68/Proposed-Session--Logging-and-Monitoring---How-to-keep-DevOps-happy">DDD South West 6 - May 2015</a></li>
+         <li><a href="http://www.dddeastanglia.com/Agenda">DDD East Anglia - Sep 2015</a> (10  minute Grok Talk version)</li>
          <li><a href="http://www.dddnorth.co.uk/Sessions/Details/143">DDD North - Oct 2015</a></li>
        </ul>
        <p>DevOps is the now very much a "thing" - but keeping your DevOps team happy isn't just about 
