--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -9,8 +9,8 @@
       <div class="text-justify">
         <p>It's part of my job as a Technical Lead to help train and mentor 
            development teams - and a big part of that is presenting technical
-           sessions to my colleagues. But I've also been very lucky over the 
-           last few years to be asked to speak
+           sessions to my colleagues.</p>
+        <p>But I've also been very lucky over the last few years to be asked to speak
            at a number of community developer events and developer groups.
            </p>
         <p>You can see the topics I've spoken on to the right - but I've got 
@@ -25,9 +25,48 @@
   </div>
   
   <div class="col-md-8 well">
-          
+
+    <div>
+       <h3>10 more things you need to do to succeed as a Tech Lead</h3>
+       <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
+            <a href="http://bit.ly/10-more-things-deck" title="10 More Things slide deck">Slide Deck</a></span>
+       <ul class="text-muted">
+         <li><a href="http://www.dddnorth.co.uk/Sessions/Details/240">DDDNorth 2016 - Oct 2016</a></li>
+         </ul>
+         <div>
+         <p>In 2014, I talked about 10 things that I believe any developer stepping into the role 
+            of Tech Lead needs to do to succeed.</p>
+         <p>This year, I've got 10 <strong>more</strong> things you should be doing as a Tech Lead.</p>
+         <p>This new 10 things are a little more specific, and a little more controversial in places, 
+            but they're tried and tested and well worth considering, if not implementing <strong>right now</strong>!</p>
+      </div>   
+    </div> 
+
+    <hr />
+
+     <div>
+       <h3>Getting your Splunk on - a developer's guide to Splunk</h3>
+       <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
+            <a href="http://bit.ly/getting-your-splunk-on-deck" title="Getting Your Splunk On slide deck">Slide Deck</a></span>
+       <ul class="text-muted">
+         <li><a href="http://www.developerdeveloperdeveloper.com/Sessions/Details/18">DDD 11 - Sept 2016</a></li>
+         </ul>
+         <div>
+         <p>Splunk is a magical tool - it sucks in your logs, indexes them and gives you a rich search 
+            and data mining application to drill deep into them.</p>
+         <p>But as a developer why the heck would you want to use such a DevOps'y tool?<p>
+         <p>In this session, I show how using Splunk whilst developing can give insight into your 
+            code - how to time transactions, graph volumes and analyse performance - and how 
+            Splunking as a developer will make life in production that much easier.</p>
+    </div>
+    </div>
+
+    <hr />
+     
      <div>
        <h3>Logging and Monitoring - How to keep DevOps happy</h3>
+       <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
+            <a href="http://bit.ly/logging-and-monitoring-deck" title="Logging and Monitoring slide deck">Slide Deck</a></span>
        <ul class="text-muted">
          <li><a href="http://www.dddsouthwest.com/Blog/Post/68/Proposed-Session--Logging-and-Monitoring---How-to-keep-DevOps-happy">DDD South West 6 - May 2015</a></li>
          <li><a href="http://www.dddeastanglia.com/Agenda">DDD East Anglia - Sep 2015</a> (10  minute Grok Talk version)</li>
@@ -41,8 +80,13 @@
           Metrics.Net and other helpers, and how Splunk should be your best friend as you bring your 
           code to production.</p>
      </div>
+
+    <hr />
+     
      <div>
        <h3>So you want to be a Tech Lead? 10 things you need to do to succeed.</h3>
+       <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
+            <a href="http://bit.ly/10-things-deck" title="10 Thinkgs slide deck">Slide Deck</a></span>
        <ul class="text-muted">
          <li><a href="http://dddeastanglia2014.azurewebsites.net/Session/Details/3139.html">DDD East Anglia - Sept 2014</a></li>
          <li><a href="http://www.dddnorth.co.uk/Sessions/Details/80">DDD North - Oct 2014</a></li>
@@ -55,8 +99,13 @@
           including how to address technical debt, herd your PMs and make sure your development team has 
           a steady flow of work (and beer, pizza or other "motivationals").</p>
      </div>
+
+    <hr />
+     
      <div>
        <h3>An Introduction to Octopus Deployment</h3>
+       <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
+            <a href="http://bit.ly/intro-to-octopusdeploy-deck" title="Introduction to OctopusDeploy slide deck">Slide Deck</a></span>
          <ul class="text-muted">
            <li><a href="http://dddeastanglia2013.azurewebsites.net/Sessions.htm">DDD East Anglia - Sept 2013</li></li>
            <li>DDD North - Oct 2013</li>
@@ -73,8 +122,13 @@
           site to a local IIS instance, a "test" server and up to Azure, and how it can be easily integrated 
           with a CI build system to control releases, with "tales from the trenches".</p>
      </div>
+
+    <hr />
+     
      <div>
        <h3>Using your NuGet for fun and profit</h3>
+       <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
+            <a href="http://bit.ly/using-your-nuget-deck"" title="Using your NuGet slide deck">Slide Deck</a></span>
          <ul class="text-muted">
            <li>DDD South West 4 - May 2012</a></li>
            <li><a href="http://dddeastanglia2013.azurewebsites.net/Sessions.htm">DDD North - Oct 2012</a></li>
