--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -26,6 +26,25 @@
   
   <div class="col-md-8 well">
 
+<div>
+       <h3>Service Discovery with Consul.io for the .Net developer</h3>
+       <!-- <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
+            <a href="http://bit.ly/10-more-things-deck" title="10 More Things slide deck">Slide Deck</a></span> -->
+       <ul class="text-muted">
+         <li><a href="hhttp://www.dddsouthwest.com/Pages/ddd-7-sessions/service-discovery-with-consul-io-for-the-dot-net-developer.aspx">DDD South West 2017 - May 2017</a></li>
+         </ul>
+         <div>
+         <p>Microservice architectures are all the rage, but even if your application only has a very few components, 
+            as soon as you go for High Availability you're already in that world. 
+            Enter Consul.io - your saviour of service discovery.</p>
+         <p>In this session, I'll explain the High Availability architecture employed at Landmark, and how we've use 
+            Consul.io to provide discovery, monitoring and load-balancing for our services across an environment that 
+            spans two geographically separate data centres.</p>
+         <p>TAnd as a bonus, you can potentially get rid of a LOAD of configuration in your app.config or web.config file.</p>
+      </div>   
+    </div> 
+
+    <hr />
     <div>
        <h3>10 more things you need to do to succeed as a Tech Lead</h3>
        <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
