Revised *Service Discovery* and *10 More Things* abstracts.

--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -34,13 +34,14 @@
          <li><a href="hhttp://www.dddsouthwest.com/Pages/ddd-7-sessions/service-discovery-with-consul-io-for-the-dot-net-developer.aspx">DDD South West 7 - May 2017</a></li>
          </ul>
          <div>
-         <p>Microservice architectures are all the rage, but even if your application only has a very few components, 
-            as soon as you go for High Availability you're already in that world. 
-            Enter Consul.io - your saviour of service discovery.</p>
+         <p>Microservice architectures are all the rage - hundreds of tiny services, all communicating - built, versioned and 
+            deployed independently. But even if your application only has a very few components, 
+            as soon as you go for High Availability you're already in that world.</p> 
+         <p>Enter <strong>Consul.io</strong> - your saviour of service discovery.</p>
          <p>In this session, I'll explain the High Availability architecture employed at Landmark, and how we've use 
             Consul.io to provide discovery, monitoring and load-balancing for our services across an environment that 
             spans two geographically separate data centres.</p>
-         <p>TAnd as a bonus, you can potentially get rid of a LOAD of configuration in your app.config or web.config file.</p>
+         <p>And as a bonus, you can potentially get rid of a <i>LOAD</i> of configuration in your app.config or web.config file.</p>
       </div>   
     </div> 
 
@@ -53,9 +54,11 @@
          <li><a href="http://www.dddnorth.co.uk/Sessions/Details/240">DDDNorth 2016 - Oct 2016</a></li>
          </ul>
          <div>
-         <p>In 2014, I talked about 10 things that I believe any developer stepping into the role 
-            of Tech Lead needs to do to succeed.</p>
-         <p>This year, I've got 10 <strong>more</strong> things you should be doing as a Tech Lead.</p>
+         <p>For any developer, stepping into the role of Tech Lead can be daunting. It’s a big step up from just 
+            writing code, and presents challenges in areas that you might not expect.</p> 
+         <p>A couple of years ago, I came up with 10 specific techniques that I believe can help both new and 
+            experienced Tech Leads to succeed. In this session I’ll recap those 10 and give you 10 <strong>more</strong> 
+            things you should be doing as a Tech Lead.</p>
          <p>This new 10 things are a little more specific, and a little more controversial in places, 
             but they're tried and tested and well worth considering, if not implementing <strong>right now</strong>!</p>
       </div>   
