--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -47,10 +47,12 @@
 
     <hr />
     <div>
-       <h3>10 more things you need to do to succeed as a Tech Lead</h3>
+       <h3>10 <b><u>more</u></b> things you need to do to succeed as a Tech Lead</h3>
        <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
             <a href="http://bit.ly/10-more-things-deck" title="10 More Things slide deck">Slide Deck</a></span>
        <ul class="text-muted">
+         <li><a href="https://skillsmatter.com/meetups/9478-10-more-things-you-need-to-do-to-succeed-as-a-tech-lead-with-joel-hammond-turner">SkillsMatter - Aug 2017</a></li>
+         <li><a href="https://www.meetup.com/Smart-Devs-User-Group/events/235570945/">SmartDevs UG - May 2016</a></li>
          <li><a href="http://www.dddnorth.co.uk/Sessions/Details/240">DDDNorth 2016 - Oct 2016</a></li>
          </ul>
          <div>
