Updated to include links to DDD 2017 for '10 MORE things', and 'Consul.io' slide deck.

--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -28,8 +28,8 @@
 
 <div>
        <h3>Service Discovery with Consul.io for the .Net developer</h3>
-       <!-- <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
-            <a href="http://bit.ly/10-more-things-deck" title="10 More Things slide deck">Slide Deck</a></span> -->
+       <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
+            <a href="http://bit.ly/Consul4Net-Slides" title="10 More Things slide deck">Slide Deck</a></span>
        <ul class="text-muted">
          <li><a href="hhttp://www.dddsouthwest.com/Pages/ddd-7-sessions/service-discovery-with-consul-io-for-the-dot-net-developer.aspx">DDD South West 7 - May 2017</a></li>
          </ul>
@@ -52,6 +52,7 @@
             <a href="http://bit.ly/10-more-things-deck" title="10 More Things slide deck">Slide Deck</a></span>
        <ul class="text-muted">
          <li><a href="https://skillsmatter.com/meetups/9478-10-more-things-you-need-to-do-to-succeed-as-a-tech-lead-with-joel-hammond-turner">SkillsMatter - Aug 2017</a></li>
+         <li><a href="http://www.developerdeveloperdeveloper.com/Sessions/Details/67">Developer Day 2017 - Jun 2017</a></li>
          <li><a href="https://www.meetup.com/Smart-Devs-User-Group/events/235570945/">SmartDevs UG - May 2016</a></li>
          <li><a href="http://www.dddnorth.co.uk/Sessions/Details/240">DDDNorth 2016 - Oct 2016</a></li>
          </ul>
