--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -29,9 +29,9 @@
 <div>
        <h3>Service Discovery with Consul.io for the .Net developer</h3>
        <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
-            <a href="http://bit.ly/Consul4Net-Slides" title="10 More Things slide deck">Slide Deck</a></span>
+            <a href="https://bit.ly/Consul4Net-Slides" title="10 More Things slide deck">Slide Deck</a></span>
        <ul class="text-muted">
-         <li><a href="hhttp://www.dddsouthwest.com/Pages/ddd-7-sessions/service-discovery-with-consul-io-for-the-dot-net-developer.aspx">DDD South West 7 - May 2017</a></li>
+         <li><a href="https://www.dddsouthwest.com/Pages/ddd-7-sessions/service-discovery-with-consul-io-for-the-dot-net-developer.aspx">DDD South West 7 - May 2017</a></li>
          </ul>
          <div>
          <p>Microservice architectures are all the rage - hundreds of tiny services, all communicating - built, versioned and 
@@ -49,12 +49,12 @@
     <div>
        <h3>10 <b><u>more</u></b> things you need to do to succeed as a Tech Lead</h3>
        <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
-            <a href="http://bit.ly/10-more-things-deck" title="10 More Things slide deck">Slide Deck</a></span>
+            <a href="https://bit.ly/10-more-things-deck" title="10 More Things slide deck">Slide Deck</a></span>
        <ul class="text-muted">
          <li><a href="https://skillsmatter.com/meetups/9478-10-more-things-you-need-to-do-to-succeed-as-a-tech-lead-with-joel-hammond-turner">SkillsMatter - Aug 2017</a></li>
-         <li><a href="http://www.developerdeveloperdeveloper.com/Sessions/Details/67">Developer Day 2017 - Jun 2017</a></li>
+         <li><a href="https://www.developerdeveloperdeveloper.com/Sessions/Details/67">Developer Day 2017 - Jun 2017</a></li>
          <li><a href="https://www.meetup.com/Smart-Devs-User-Group/events/235570945/">SmartDevs UG - May 2016</a></li>
-         <li><a href="http://www.dddnorth.co.uk/Sessions/Details/240">DDDNorth 2016 - Oct 2016</a></li>
+         <li><a href="https://www.dddnorth.co.uk/Sessions/Details/240">DDDNorth 2016 - Oct 2016</a></li>
          </ul>
          <div>
          <p>For any developer, stepping into the role of Tech Lead can be daunting. It’s a big step up from just 
@@ -72,9 +72,9 @@
      <div>
        <h3>Getting your Splunk on - a developer's guide to Splunk</h3>
        <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
-            <a href="http://bit.ly/getting-your-splunk-on-deck" title="Getting Your Splunk On slide deck">Slide Deck</a></span>
+            <a href="https://bit.ly/getting-your-splunk-on-deck" title="Getting Your Splunk On slide deck">Slide Deck</a></span>
        <ul class="text-muted">
-         <li><a href="http://www.developerdeveloperdeveloper.com/Sessions/Details/18">DDD 11 - Sept 2016</a></li>
+         <li><a href="https://www.developerdeveloperdeveloper.com/Sessions/Details/18">DDD 11 - Sept 2016</a></li>
          </ul>
          <div>
          <p>Splunk is a magical tool - it sucks in your logs, indexes them and gives you a rich search 
@@ -91,11 +91,11 @@
      <div>
        <h3>Logging and Monitoring - How to keep DevOps happy</h3>
        <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
-            <a href="http://bit.ly/logging-and-monitoring-deck" title="Logging and Monitoring slide deck">Slide Deck</a></span>
+            <a href="https://bit.ly/logging-and-monitoring-deck" title="Logging and Monitoring slide deck">Slide Deck</a></span>
        <ul class="text-muted">
-         <li><a href="http://www.dddsouthwest.com/Blog/Post/68/Proposed-Session--Logging-and-Monitoring---How-to-keep-DevOps-happy">DDD South West 6 - May 2015</a></li>
-         <li><a href="http://www.dddeastanglia.com/Agenda">DDD East Anglia - Sep 2015</a> (10  minute Grok Talk version)</li>
-         <li><a href="http://www.dddnorth.co.uk/Sessions/Details/143">DDD North - Oct 2015</a></li>
+         <li><a href="https://www.dddsouthwest.com/Blog/Post/68/Proposed-Session--Logging-and-Monitoring---How-to-keep-DevOps-happy">DDD South West 6 - May 2015</a></li>
+         <li><a href="https://www.dddeastanglia.com/Agenda">DDD East Anglia - Sep 2015</a> (10  minute Grok Talk version)</li>
+         <li><a href="https://www.dddnorth.co.uk/Sessions/Details/143">DDD North - Oct 2015</a></li>
        </ul>
        <p>DevOps is the now very much a "thing" - but keeping your DevOps team happy isn't just about 
           working with them on deployments, it's about giving them the tools to support your code in 
@@ -111,10 +111,10 @@
      <div>
        <h3>So you want to be a Tech Lead? 10 things you need to do to succeed.</h3>
        <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
-            <a href="http://bit.ly/10-things-deck" title="10 Thinkgs slide deck">Slide Deck</a></span>
+            <a href="https://bit.ly/10-things-deck" title="10 Thinkgs slide deck">Slide Deck</a></span>
        <ul class="text-muted">
-         <li><a href="http://dddeastanglia2014.azurewebsites.net/Session/Details/3139.html">DDD East Anglia - Sept 2014</a></li>
-         <li><a href="http://www.dddnorth.co.uk/Sessions/Details/80">DDD North - Oct 2014</a></li>
+         <li><a href="https://dddeastanglia2014.azurewebsites.net/Session/Details/3139.html">DDD East Anglia - Sept 2014</a></li>
+         <li><a href="https://www.dddnorth.co.uk/Sessions/Details/80">DDD North - Oct 2014</a></li>
        </ul>
        <p>"Tech Lead" is an amorphous job title - is it all about the technology, or all about leadership? 
           What should the balance really be?</p>
@@ -130,13 +130,13 @@
      <div>
        <h3>An Introduction to Octopus Deployment</h3>
        <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
-            <a href="http://bit.ly/intro-to-octopusdeploy-deck" title="Introduction to OctopusDeploy slide deck">Slide Deck</a></span>
+            <a href="https://bit.ly/intro-to-octopusdeploy-deck" title="Introduction to OctopusDeploy slide deck">Slide Deck</a></span>
          <ul class="text-muted">
-           <li><a href="http://dddeastanglia2013.azurewebsites.net/Sessions.htm">DDD East Anglia - Sept 2013</li></li>
+           <li><a href="https://dddeastanglia2013.azurewebsites.net/Sessions.htm">DDD East Anglia - Sept 2013</li></li>
            <li>DDD North - Oct 2013</li>
-           <li><a href="http://www.meetup.com/Chester-Devs/events/161252402/">Chester Devs - Mar 2014</a></li>
-           <li><a href="http://www.meetup.com/DeveloperSouthCoast/events/197711632/">Developer South Coast - Sept 2014</a></li>
-           <li><a href="http://attending.io/events/thedevbakery-april15">The Dev Bakery - April 2015</a></li>
+           <li><a href="https://www.meetup.com/Chester-Devs/events/161252402/">Chester Devs - Mar 2014</a></li>
+           <li><a href="https://www.meetup.com/DeveloperSouthCoast/events/197711632/">Developer South Coast - Sept 2014</a></li>
+           <li><a href="https://attending.io/events/thedevbakery-april15">The Dev Bakery - April 2015</a></li>
          </ul>
        <p>In an enterprise environment, publishing to live from the desktop really doesn't cut it - testing, 
           customer approval and change tracking all require more checks, steps and environments than the 
@@ -153,10 +153,10 @@
      <div>
        <h3>Using your NuGet for fun and profit</h3>
        <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
-            <a href="http://bit.ly/using-your-nuget-deck"" title="Using your NuGet slide deck">Slide Deck</a></span>
+            <a href="https://bit.ly/using-your-nuget-deck" title="Using your NuGet slide deck">Slide Deck</a></span>
          <ul class="text-muted">
            <li>DDD South West 4 - May 2012</a></li>
-           <li><a href="http://dddeastanglia2013.azurewebsites.net/Sessions.htm">DDD North - Oct 2012</a></li>
+           <li><a href="https://dddeastanglia2013.azurewebsites.net/Sessions.htm">DDD North - Oct 2012</a></li>
            </ul>
          <p>The explosive take-up of NuGet clearly demonstrates just how valuable a packaging system for .Net can be.</p>
          <p>This session looks the issues surrounding creating NuGet packages for use within your own organisation 
