--- a/app/views/main.html
+++ b/app/views/main.html
@@ -24,7 +24,7 @@
     <div class="well sidebar-nav">
     <h2><span class="glyphicon glyphicon-comment"></span> Golden Nuggets</h2>
       <p>My blog - delivering nuggets of technical information for .Net developers</p>
-    <p><a class="btn btn-sm btn-primary" href="http://nuggets.hammond-turner.org.uk/">View blog <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+    <p><a class="btn btn-sm btn-primary" href="https://nuggets.hammond-turner.org.uk/">View blog <span class="glyphicon glyphicon-chevron-right"></span></a></p>
   </div>
   </div>
   
@@ -44,7 +44,7 @@
     <p>These are probably the best ways to interact with me.</p>
     <div class="container-fluid">
       <div class="col-sm2">
-        <p><a href="http://www.linkedin.com/in/joelht" ><img src="http://www.linkedin.com/img/webpromo/btn_viewmy_160x33.gif" width="160" height="33" border="0" alt="View Joel Hammond-Turner's profile on LinkedIn"></a></p>
+        <p><a href="https://www.linkedin.com/in/joelht" ><img src="https://www.linkedin.com/img/webpromo/btn_viewmy_160x33.gif" width="160" height="33" border="0" alt="View Joel Hammond-Turner's profile on LinkedIn"></a></p>
       </div>
       <div class="col-sm2">
         <p><a href="https://twitter.com/rammesses" class="twitter-follow-button" data-show-count="false" data-size="large">Follow @rammesses</a></p>
