Added 'Azure In Action' talk to 'speaking' - plus package updates

--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -27,9 +27,31 @@
   <div class="col-md-8 well">
 
 <div>
+    <h3>Azure In Action - CosmosDB, Functions and ServiceBus in Perfect Harmony</h3>
+    <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
+         <a href="https://bit.ly/CloudAuditDeck" title="Cloud Audit Slide Deck">Slide Deck</a></span>
+    <ul class="text-muted">
+      <li><a href="https://dddsouthwest.com/proposed-talks/106">DDD South West 8 - April 2018</a></li>
+      </ul>
+      <div>
+      <p>There's so many parts to Azure, it's sometimes hard to decide what to use and when. 
+         Do I use TableStore or CosmosDB? Would BlobStore be better? Should I host a full-fat 
+         .Net service in a VM, or stand up an ASP.Net Core WebApi? What about functions? 
+         The choices are myriad.</p>
+      <p>In this talk I describe how at Landmark we made these kind of decisions as we 
+         implemented some new features in our product. I talk about the questions you need 
+         to ask to make those decisions, where we went wrong, and how we succeeded in the end.</p>
+      <p>I describe in detail how we used CosmosDB, Azure Functions and Service Bus together 
+         to provide a Compliance Audit trail feature that would scale properly, work reliably, 
+         be trivial to use, and that wouldn't break the bank.</p>
+   </div>   
+ </div> 
+
+ <hr />
+ <div>
        <h3>Service Discovery with Consul.io for the .Net developer</h3>
        <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
-            <a href="https://bit.ly/Consul4Net-Slides" title="10 More Things slide deck">Slide Deck</a></span>
+            <a href="https://bit.ly/Consul4Net-Slides" title="Consul slide deck">Slide Deck</a></span>
        <ul class="text-muted">
          <li><a href="https://www.dddsouthwest.com/Pages/ddd-7-sessions/service-discovery-with-consul-io-for-the-dot-net-developer.aspx">DDD South West 7 - May 2017</a></li>
          </ul>
