--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,7 +14,7 @@
       <img class="hero-image" src="https://lh4.googleusercontent.com/-TgRw25EW5zI/AAAAAAAAAAI/AAAAAAAAL7k/SbLenKDqfKQ/s250-c-k/photo.jpg" alt="Joel Hammond-Turner">
       <h1><span class="glyphicon glyphicon-globe"></span> Hello t'Internet</h1>
       <p>Welcome to my <strong>new</strong>, new home on the net.</p>
-      <p><a class="btn btn-sml btn-primary" ng-href="#/about">Learn More <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+      <p><a class="btn btn-sml btn-primary" ng-href="/#!/about">Learn More <span class="glyphicon glyphicon-chevron-right"></span></a></p>
     </div>
   </div>
 </div>  
@@ -33,7 +33,7 @@
       <div>
         <h2><span class="glyphicon glyphicon-bullhorn"></span> Speaking</h2>
         <p>I get about a bit, and have spoken at quite a few community conferences and user groups - and I am always looking for more opportunities.</p>
-        <p><a class="btn btn-sm btn-primary" href="/#/speaking">Learn more <span class="glyphicon glyphicon-chevron-right"></span></a></p>
+        <p><a class="btn btn-sm btn-primary" href="/#!/speaking">Learn more <span class="glyphicon glyphicon-chevron-right"></span></a></p>
       </div>
     </div>          
   </div>
