Updated  to include DevSouthCoast - April 2019

--- a/app/views/speaking.html
+++ b/app/views/speaking.html
@@ -29,8 +29,10 @@
 
          <div>
             <h3>You're the Tech Lead... <span style="font-weight:bolder; font-style: oblique">you</span> fix it!</h3>
-            <!-- <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>You fix it Slide Deck">Slide Deck</a></span> -->
+            <span class="pull-right"><span class="glyphicon glyphicon-save" aria-hidden="true"></span>
+               <a href="http://bit.ly/YouFixIt-Deck" title="YOU Fix It! Slide Deck">Slide Deck</a></span>
             <ul class="text-muted">
+               <li><a href="https://www.meetup.com/DeveloperSouthCoast/events/255391926/">Dev South Coast - April 2019</a></li>
                <li><a href="https://www.meetup.com/dotnetsouthwest/events/259666974/">Dotnet South West Meetup - March 2019</a>
                </li>
             </ul>
@@ -76,6 +78,9 @@
          <hr />
          <div>
             <h3>Honey, I shrunk `ConfigureServices()`</h3>
+            <span class="pull-right"><span class="glyphicon glyphicon-code" aria-hidden="true"></span>
+               <a href="https://github.com/Rammesses/IoC.Discovery"
+               title="Link to source repo">Repo</a></span>
             <span class="pull-right"><span class="glyphicon glyphicon-link" aria-hidden="true"></span>
                <a href="https://nuggets.hammond-turner.org.uk/2018/06/honey-i-shrunk-configureservices.html"
                   title="Link to blog post">Blog Post</a></span>
